--- a/piggy-bank_dapp/package.json
+++ b/piggy-bank_dapp/package.json
@@ -11,8 +11,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vuex": "^3.6.2",
+    "web3": "^1.3.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
