--- a/piggy-bank_dapp/package.json
+++ b/piggy-bank_dapp/package.json
@@ -11,6 +11,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@truffle/hdwallet-provider": "^1.3.1",
+    "dotenv": "^9.0.0",
     "font-awesome": "^4.7.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
