--- a/api/package.json
+++ b/api/package.json
@@ -9,6 +9,7 @@
   "author": "Johnny Villegas",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
