--- a/piggy-bank_dapp/package.json
+++ b/piggy-bank_dapp/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@truffle/hdwallet-provider": "^1.3.1",
+    "axios": "^0.21.1",
     "dotenv": "^9.0.0",
     "font-awesome": "^4.7.0",
     "vue": "^2.5.2",
