--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ secrets.json
 # Production docker files
 docker-compose.prod.yml
 Dockerfile.prod
+
+# Ignore vue prod folder
+piggy-bank_dapp/dist
